--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "fuse.js": "^7.0.0",
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
